# OpenArc

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build-all.ps1  build.rs  build_all.rs  stage-gui.ps1  test.catalog.sqlite
.claude/: settings.local.json
BPG/: BUILD_COMPLETE.md  BUILD_PLAN.md  ENCODER_STATUS.md  FINAL_STATUS.md  FUTURE_OPTIMIZATION_PLAN.md  IMPLEMENTATION_PLAN.md  SESSION_SUMMARY.md  bpg-convert.py  bpg-convert2.py  create_test_image.py  jcvtc-compile-guide.md  test_output.bpg
BPG/libbpg-0.9.8/: Makefile  bpg_api.c  bpg_api.d  bpg_api.h  bpg_encoder_wrapper.c  bpgdec.c  bpgdec.d  bpgenc.c  bpgenc.d  bpgenc_lib.d  build_bpg_with_jctvc.bat  build_bpg_with_x265.bat  build_complete.bat  build_encoder_jctvc.bat  build_jctvc.bat  build_jctvc_ffmpeg.sh  build_jctvc_with_ffmpeg.bat  build_native_lib.bat  build_native_lib_simple.bat  build_windows.bat  build_x265.bat  libbpg.d  test_native.bpg  x265_glue.c  x265_glue.d
DocBrakeGUI/: App.xaml  App.xaml.cs  DocBrakeGUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  OPENARC_CHANGES.md  TestWindow.xaml  TestWindow.xaml.cs  Test_Timing_Implementation.md
DocBrakeGUI/Commands/: RelayCommand.cs
arcmax/: BUILD_CODECS.md  Cargo.toml  New Text Document.txt  arcmax  build.rs  build_codecs.ps1  build_codecs.sh  build_gcc.rs  check_archive.rs  check_errors.txt  check_final.txt  check_output.txt  debug_output.txt  errors.txt  output.txt  output2.txt  srep-changes.cpp  test.arc  unencryptedtest.arc
arcmax/.cargo/: config.toml
arcmax/.claude/: settings.local.json
arcmax/SREP-dev/: CMakeLists.txt  Makefile  README.md  REFACTORING_SUMMARY.md  example.cpp  srep_lib.cpp  srep_lib.h
arcmax/crypto-dev/: CRYPTO_DEBUG_GUIDE.md  CRYPTO_INTEGRATION.md  CRYPTO_PATCHES.md  CRYPTO_SUMMARY.md  INDEX.md  QUICK_START.md  VISUAL_GUIDE.md  crypto_updated.rs
arcmax/freearc_cpp_lib/: TornadoImprovements.h  freearc_wrapper.cpp  freearc_wrapper.h  unistd.h
arcmax/freearc_cpp_lib/Compression/: Common.cpp  Common.h  Compression.h
arcmax/freearc_cpp_lib/Compression/Delta/: Delta.cpp
arcmax/freearc_cpp_lib/Compression/GRZip/: BWT.c  C_GRZip.h  LZP.c  MTF_Ari.c  Rec_Flt.c  ST4.c  WFC_Ari.c  libGRZip.h
arcmax/freearc_cpp_lib/Compression/LZ4/: C_LZ4.h  lz4hc.c
arcmax/freearc_cpp_lib/Compression/LZMA2/: C_LZMA.cpp  C_LZMA.h
arcmax/freearc_cpp_lib/Compression/LZP/: C_LZP.h
arcmax/freearc_cpp_lib/Compression/MM/: mm.cpp  tta.cpp  ttaenc.h
arcmax/freearc_cpp_lib/Compression/PPMD/: C_PPMD.cpp  C_PPMD.h  Model.cpp  Model.hpp  PPMdType.h  SubAlloc.hpp  makefile
arcmax/freearc_cpp_lib/Compression/SREP/: compress_cdc.cpp  srep.cpp  srep_lib.h
arcmax/freearc_cpp_lib/Compression/Tornado/: C_Tornado.h
arcmax/freearc_cpp_lib/Compression/_Encryption/headers/: tomcrypt_macros.h
arcmax/freearc_cpp_lib/Unarc/: makefile
arcmax/llm-markdown/: ARC-SPEC-STATUS.md  CASCADE_CODEC_PLACEHOLDERS.md  CURRENT_ISSUES_SUMMARY.md  FFI_CODEC_PREPARATION_SUMMARY.md  FREEARC_CODEC_IMPROVEMENTS_SUMMARY.md  FREEARC_FFI_APPROACH.md  FREEARC_FFI_COMPLETE_APPROACH.md  FREEARC_FFI_MIGRATION_SUMMARY.md  PLAN-compression-encryption.md  PPMII_IMPLEMENTATION_PLAN.md  SESSION_LOG.md  TORNADO_IMPROVEMENTS_IMPLEMENTED.md  TORNADO_TODO_ANALYSIS.md  donerecently.md  install_mingw.md
arcmax/llm-markdown/markdown/: CRYPTO_IMPLEMENTATION.md  blueprint.md  currentsummary.md  donesofar.md
arcmax/src/: cli.rs  lib.rs  main.rs
arcmax/src/codecs/: crc32.rs  dict.rs  grzip.rs  lz4.rs  lzma2.rs  lzma2_old.rs  lzp.rs  mod.rs  mod_old.rs  ppmd.rs  tornado.rs  zstd.rs
arcmax/src/core/: archive.rs  crypto.rs  debug.rs  format.rs  mod.rs  varint.rs
arcmax/src/formats/: mod.rs  peazip.rs
arcmax/src/formats/freearc/: block.rs  constants.rs  directory.rs  footer.rs  mod.rs  reader.rs  utils.rs  writer.rs
arcmax/tests/: freearc_integration_test.rs
bpg-viewer/: .gitignore  BUILD.md  CACHE_LOCATION.md  Cargo.toml  GUI_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION.md  LESSONS_LEARNED_IMAGE_RENDERING.md  Makefile  README.md  WPF_GUI_IMPLEMENTATION.md  build-and-deploy.bat  build-and-deploy.ps1  build-gui.ps1  build-gui.sh  build.rs
bpg-viewer/BpgViewerGUI/: App.xaml  App.xaml.cs  BpgViewerGUI.csproj  ImageViewerWindow.xaml  ImageViewerWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  README_GUI.md
bpg-viewer/BpgViewerGUI/Commands/: RelayCommand.cs
bpg-viewer/BpgViewerGUI/Converters/: BoolToVisibilityConverter.cs  ValueConverters.cs
bpg-viewer/BpgViewerGUI/Models/: BpgImage.cs  FolderItem.cs  ThumbnailItem.cs
bpg-viewer/BpgViewerGUI/NativeInterop/: BpgViewerFFI.cs
bpg-viewer/BpgViewerGUI/Services/: ThumbnailCacheService.cs
bpg-viewer/BpgViewerGUI/ViewModels/: CatalogViewModel.cs  ImageViewerViewModel.cs  MainViewModel.cs
bpg-viewer/BpgViewerGUI/Views/: CatalogView.xaml  CatalogView.xaml.cs  ImageViewerControl.xaml  ImageViewerControl.xaml.cs
bpg-viewer/examples/: ffi_usage.c  simple_decode.rs
bpg-viewer/include/: bpg_viewer.h
bpg-viewer/src/: decoder.rs  encoder.rs  ffi.rs  lib.rs  thumbnail.rs  universal_decode.rs  universal_thumbnail.rs
bpg-viewer/src/bin_disabled/: gui.rs  thumbnail.rs  viewer.rs
codecs/: Cargo.toml  bpg.rs  bpg_js.rs  build.rs  ffmpeg.rs  ffmpeg_wrapper.c  freearc_wrapper.rs  heic.rs  libraw_sys.rs  mod.rs  raw.rs  raw_tests.rs  video_analyzer.rs
ffmpeg-8.0.1/: BUILD_INSTRUCTIONS.md  build_all.sh  config.asm  config.h  config_components.h  configure_minimal.sh
llm-doc/: ARCHITECTURE.md  BPG_BUILD_STATUS.md  BUILD_GUIDE.md  CHANGES_2026-01-23.md  CHANGES_SUMMARY.md  COMPILATION_GUIDE.md  FFI_IMPLEMENTATION_STATUS.md  FFMPEG_BUILD_COMPLETE.md  FFMPEG_BUILD_PLAN.md  FFMPEG_INTEGRATION_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START.md  README.md  TESTING_GUIDE.md  WORKSPACE_ARCHITECTURE.md
openarc-core/: Cargo.toml
openarc-core/src/: archive_tracker.rs  backup_catalog.rs  bpg_wrapper.rs  hash.rs  lib.rs  orchestrator.rs
openarc-ffi/: Cargo.toml  build.rs  openarc_ffi.h
openarc-ffi/src/: lib.rs
src/: cli.rs  lib.rs  main.rs
src/core/: hash.rs  (+4 more)
zstd-archive/: Cargo.toml
zstd-archive/src/: lib.rs
(+111 files in other folders)
