[workspace]
members = [
    "openarc-core",
    "arcmax",
    "zstd-archive",
    "codecs",
    "openarc-ffi",
    "bpg-viewer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["OpenArc Contributors"]

[workspace.dependencies]
# Shared dependencies across workspace
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.11"
walkdir = "2.5"
indicatif = "0.18"
crc32fast = "1.5"
infer = "0.19"
tempfile = "3.24"
libloading = "0.9"
flume = "0.12"

[package]
name = "openarc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
flume.workspace = true
indicatif.workspace = true
openarc-core = { path = "openarc-core" }

[[bin]]
name = "openarc"
path = "src/main.rs"

[build-dependencies]
# No external dependencies needed - build.rs uses only std
