[package]
name = "arcmax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FreeARC compression library - Rust port of FreeARC codecs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
clap.workspace = true
rayon.workspace = true
crc32fast.workspace = true
bytes = "1.11"
aes = "0.8"
ctr = "0.9"
generic-array = "1.3"
crypto-common = "0.1"
pbkdf2 = "0.12"
sha2 = "0.10"
blowfish = "0.9"
rand = "0.9"
flate2 = { version = "1", features = ["zlib-rs"] }
ppmd-rust = { git = "https://github.com/hasenbanck/ppmd-rust.git" }
zstd = "0.13"

[lib]
name = "arcmax"
path = "src/lib.rs"

[[bin]]
name = "arcmax"
path = "src/main.rs"

[build-dependencies]
cc = "1.2"
