[package]
name = "codecs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BPG, HEIC, and FFmpeg codec implementations for OpenArc"

[features]
default = []
heif = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
libloading.workspace = true
infer.workspace = true
tempfile.workspace = true
image = { version = "0.25.9", default-features = false, features = ["png", "jpeg", "tiff", "bmp", "webp"] }
which = "8.0"

[build-dependencies]
cc = "1.2"

[lib]
name = "codecs"
path = "mod.rs"
